copy mostly ready for translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,9 @@
-{"Created By":"Created By",
+{
+  "viz2.1":"self-learners",
+  "viz2.2":"and animators, artists, game makers, creative-technologists, curriculum planners, designers, graphic designers, graphics editors, learning experience designers, project managers, software engineer, student, teachers, university faculty members, visualization researchers",
+  "viz2.3":"w/ all kinds of experiences",
+  "Directions":"Click on the pink text to reveal graphs!",
+  "Created By":"Created By",
  "2020Gallery_Intro":"To learn more about the project and how it was made, click on the image of each card preview. \n\nFeel free to leave feedback or a comment in our [guestbook](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
  "Project Links": "Project Links",
  "Visualizations":"Visualizations",
@@ -30,6 +35,7 @@
  "Viz3":"to them p5.js is...",
  "Viz4":"view the projects →",
  "Jump to":"Jump to:",
+ "filter by":"filter by",
  "filters":[
     {"name": "All"},
     {"name": "Visual"},
@@ -317,11 +323,11 @@
       "pronouns": "Aisha: she/her/hers, Kuat: he/him/his, Jeff: he/him/his",
       "location": "Almaty, Kazakhstan; Munich, Germany; Providence, Rhode Island",
       "title": "ProtestKor.pe",
-      "description": "PROTEST KORPE is inspired by quraq körpe, a type of Kazakh quilt; like a quraq körpe, civic activism and protection of our rights depend on the voices and contributions of each of us. In this work, each square on our \"collective quilt\" is important to sew a new Kazakh reality.\n\nThe website enables protestors to create a körpe square with a slogan, including solidarity with Asya, speaking against police violence, and supporting free expression, which can then be uploaded to Instagram to form a part of the unfolding collective körpe: https://www.instagram.com/explore/tags/СправедливостьДляАси",
+      "description": "PROTEST KORPE is inspired by quraq körpe, a type of Kazakh quilt; like a quraq körpe, civic activism and protection of our rights depend on the voices and contributions of each of us. In this work, each square on our \"collective quilt\" is important to sew a new Kazakh reality.\n\nThe website enables protestors to create a körpe square with a slogan, including solidarity with Asya, speaking against police violence, and supporting free expression, which can then be [uploaded to Instagram to form a part of the unfolding collective körpe](https://www.instagram.com/explore/tags/СправедливостьДляАси)",
       "extradesc": "",
       "live": "https://protestkor.pe",
       "code": "https://github.com/jywarren/protest-banners/",
-      "type": ["World"],
+      "type": "World",
       "tools": "",
       "answer1": "We are Kazakh citizens and friends of Asya Tulesova, who think that the gross injustices happening in Kazakhstan demand our attention, and who believe in the power of collective action to bring about the world we want.",
       "answer2": "Different stories, but have tinkered with it for some years!",
@@ -361,7 +367,7 @@
       "title": "youtube.nextnextnext.video",
       "description": "Youtube.nextnextnext.video is the website visualize the relationship of the original video and the recommended “next videos’.",
       "extradesc": "Youtube endlessly recommend the next video when the video played. The next video become unrelated with the very first video when the recommendation keep repeated. When the video which had been already shown before is recommended, the next video chain will be stopped at the screen. The user can search their own keyword and test the visualization of the recommended next video chain. The first result of the search keyword located close to the starting point and moves farther when the recommendation chain depth is deeper. If the video is recommended several times, the nodes will be overlaped. The data of the search keyword's results and their recommended next videos has been crawled with Ruby and visualized by p5.js.",
-      "live": "youTube.nextnextnext.video",
+      "live": "https://youTube.nextnextnext.video",
       "code": "https://github.com/marxil/youtube-nextnextnext-video",
       "type": "Data Visualization",
       "tools": "",
@@ -423,7 +429,7 @@
       "location": "Carrabassett Valley, Maine",
       "title": "mouseText",
       "description": "mouseText is an interactive poem using p5.js's WEBGL library. Arrow keys and mouse clicks animate, reveal, and otherwise change the way that the poem is read. Thematically the poem is about a troubled relationship with technology and intimacy, which gets informed by the reader's movements.",
-      "extradesc": "n/s",
+      "extradesc": "",
       "live": "https://editor.p5js.org/hannahtardie/full/jLRmt2khh",
       "code": "https://editor.p5js.org/hannahtardie/sketches/jLRmt2khh",
       "type": "Text",
@@ -433,7 +439,7 @@
       "answer3": "I used p5.js for the entire project",
       "answer4": "my favorite feature is definitely the way that you can use text as a texture on 3d objects using WEBGL. I am also a huge fan of push and pop :)",
       "answer5": "Yes, I had a lot of trouble getting the mouse to click through each \"slide\" of the poem but my professor Luisa helped me use % to make it click through each slide and loop back to the beginning.",
-      "answer6": "Erin Nire's project Bird2Vec https://hystericascetic.com/Bird2vec",
+      "answer6": "[Erin Nire's project Bird2Vec](https://hystericascetic.com/Bird2vec)",
       "social": "www.hannahtardie.com",
       "id": "project-6",
       "picid": "6.png"
@@ -700,7 +706,7 @@
       "live": "https://editor.p5js.org/lishap/present/JebXEXumC",
       "code": "https://editor.p5js.org/lishap/sketches/JebXEXumC",
       "type": ["Camera","Sound"],
-      "tools": "p5.DOM, p5.sound, clmtrackr.js",
+      "tools": "p5.DOM,p5.sound,clmtrackr.js",
       "answer1": "Lisha is senior studying interactive media arts at NYU. This summer, she cleaned her room and made lino prints in support of Black Lives Matter and prison/police abolition. Prince just graduated from NYU AD with a computer engineering degree, focusing on software engineering and robotics.",
       "answer2": "Before ITP had an undergrad program, Lisha took a few grad courses at ITP. We learned P5.js in one of them! Prince is a comp sci whiz, but I learned p5.js in IMA's Code of Music course.",
       "answer3": "We used p5.js entirely, with the addition of the clm facial tracking library.",
@@ -742,7 +748,7 @@
       "live": "http://modalflow.baltazarperez.com",
       "code": "https://www.dropbox.com/sh/77kg5mqz500hlwx/AAC6fmvQpNDKh9SwY0S2762Wa?dl=0",
       "type": "Data Visualization",
-      "tools": "hsluv.js,p5.DOM,loadJSON,curveVertex",
+      "tools": "hsluv,p5.DOM,loadJSON,curveVertex",
       "answer1": "I'm a computer science graduate with a focus on data visualization. From a scientific perspective, I mix data-driven research with aesthetic research.",
       "answer2": "I got started with Processing thanks to a wise man who taught me a lot of things. Then, after graduating from computer science, I started working for the media in web projects that required me to make the leap to p5.",
       "answer3": "p5 is everything in this project. Except for the preprocessing of the data, which was done in Python, it loads the data, draws it and controls the side menu with the dom library.\nAlthough many think of D3 as the best tool for visualization, p5 lends itself so much more to creativity. I always work my visualizations from scratch with p5, as anyone that looks into my code will confirm. Also that I am not a very good programmer. I like to think visually about data and then sketch those ideas with p5. The moment the data flows, bringing the sketch to life, is the most fulfilling part of the process.",
@@ -874,8 +880,8 @@
       "answer3": "We used p5.js and the collide 2D library to simulate the infection rates in a hypothetical city called Blob Ville. When the blobs were near colliding with each other, they would move away if social distancing.",
       "answer4": "My favorite p5.js feature is random because you can use it to create generative art.",
       "answer5": "We faced many challenges, especially when the blobs would collide with each other even when social distancing was enabled and when the infections were increasing at abnormal rates. Despite being located in different states, we were able to communicate with each other in order to further our progress in creating this. We learned to test different edge cases and to debug our code together because it takes multiple people to make a project come together!",
-      "answer6": "Definitely check out We Are Not a Virus (wearenotavirus.org)! It's a student-run organization that aims to fight misinformation and racial injustice in the wake of COVID-19 through education, advocacy, and resources.",
-      "social": "https://www.linkedin.com/in/shirlingxu/",
+      "answer6": "Definitely check out [We Are Not a Virus](wearenotavirus.org)! It's a student-run organization that aims to fight misinformation and racial injustice in the wake of COVID-19 through education, advocacy, and resources.",
+      "social": "",
       "id": "project-27",
       "picid": "27.png"
     },
@@ -907,8 +913,8 @@
       "title": "Soundspin",
       "description": "Soundspin is an instrument like a player piano or a crank music box that you can program yourself to play different songs or noises. Soundspin works best on mobile sitting in a swivel chair because your rate of spin determines how fast or slow or even what direction the song plays.",
       "extradesc": "Soundspin uses the sensors in our cameras to create a new way of interfacing with our phones.",
-      "live": "https://www.joemckaystudio.com/soundspin/ instructions: https://www.joemckaystudio.com/soundspin.php",
-      "code": "This project started in the code editor but later version were finished in Atom. I'm the only developer so there is no advantage to using Git. People can look at the source code through \"view source\".",
+      "live": "https://www.joemckaystudio.com/soundspin.php",
+      "code": "",
       "type": "Sound",
       "tools": "WEBGL, p5.PolySynth,p5.DOM",
       "answer1": "I'm an artist and professor of New Media at SUNY purchase college.",
@@ -928,7 +934,7 @@
       "title": "Animator",
       "description": "Animator is a basic drawing animation application.",
       "extradesc": "",
-      "live": "animator.qaotech.com",
+      "live": "https:/animator.qaotech.com",
       "code": "https://editor.p5js.org/hiorws/sketches/r51uTVZ8-",
       "type": "Tool",
       "tools": "p5.gui,PGraphics",
@@ -980,7 +986,7 @@
       "answer4": "I love the canvas, and how it enables drawing with p5.js in all its variety. I also love that the web editor allows folx to share and augment each other's code. It's that simple I'm afraid!",
       "answer5": "Creating illustrations that can be squashed and stretched with windowWidth/windowHeight and still looked natural.",
       "answer6": "The Parable of the Sower by Octavia Butler",
-      "social": "cdacanay.com",
+      "social": "http://cdacanay.com",
       "id": "project-32",
       "picid": "32.png"
     },
@@ -1001,7 +1007,7 @@
       "answer4": "My favorite p5.js function is the the ability to track the user to create interesting shapes and effects!",
       "answer5": "My group faced a great deal of challenges when developing this project. As a result of the pandemic, we needed to create a new project from scratch halfway throughout the semester. The project was created for a course called Playful Communication of Serious Research, which is taught by the director of the interactive department at the American Museum of Natural History.",
       "answer6": "Check out this project: https://experiments.withgoogle.com/colorful-fluid. Fluid dynamics can be demonstrated with WebGL beautifully!",
-      "social": "http://nickbgrant.com/my-portfolio/",
+      "social": "",
       "id": "project-33",
       "picid": "33.png"
     },
@@ -1076,7 +1082,7 @@
       "description": "This is a visualization of the experiences of students during the beginning of the COVID-19 Pandemic.",
       "extradesc": "In the spring of 2020, SARS-CoV-2 became a global pandemic and sent the world into a state of uncertainty. When classes at Temple University suddenly became physically distant, GAD 3023, the Creative Coding class in Graphic & Interactive Design, began collecting the experiences of students at Tyler School of Art and Architecture to visualize how these experiences and mindsets changed over time. Each week of online instruction in Spring 2020 is represented here in self-reported student emotional states, quotes from surveyed students, and news headlines.",
       "live": "http://tylercreativecoding.com/",
-      "code": "",
+      "code": "https://github.com/jennybkowalski/un_project-tyler_creative_coding",
       "type": "Data Visualization",
       "tools": "text",
       "answer1": "I teach graphic & interactive design at Tyler School of Art and Architecture at Temple University. I spent most of this summer on maternity leave with my new daughter.",
@@ -1181,7 +1187,7 @@
       "description": "This project is about personal expression ,using camera input to shape graphical forms and lines , based on Daniel Shiffman Tutorial",
       "extradesc": "In the pandemics World which all the individuals cover their lips with mask maybe there is need to find new ways to express and see",
       "live": "https://www.openprocessing.org/user/108498#sketches",
-      "code": "",
+      "code": "https://www.openprocessing.org/user/108498#sketches",
       "type": "Camera",
       "tools": "createCapture",
       "answer1": "I'm an architect who in interested in exploring architecture as a way of human-being life moreover I'm curios to expand architecture in WorldWideWeb",
@@ -1316,7 +1322,7 @@
       "answer4": "My favorite p5.js feature is that programmers can easily create p5.Element objects and add them to their sketch.",
       "answer5": "Before finding p5.File, working on analyzing a user's local sound file with p5.FFT was difficult and confusing. However, with p5.File, this task became much easier.",
       "answer6": "Honestly, a few of the most helpful functions in this program are setInput, which allowed the program to change which audio input to analyze, and map.",
-      "social": "www.linkedin.com/in/kira-tran-2024",
+      "social": "",
       "id": "project-48",
       "picid": "48.png"
     },
@@ -1459,7 +1465,7 @@
       "tools": "",
       "answer1": "I m a highschooler.joining my graduation this year.i have a focus to help people with the technologies and and projects I create. I also have desire to teach people who are in need of it",
       "answer2": "I first saw Daniel shiffman sir YouTube channel .lots of respect to him.my low end pc could not support any game engine so I found p5js a very robust tool to code games.\nMy first project was a simple game with 2 ellipses to merge.",
-      "answer3": "So the project submitted was created basically for a game jam .where the judge laughed playing and praised me during his Livestream.\n          I had vectors in my course and I ve been working on mechanics of arrow used in game then I went on creating the game.",
+      "answer3": "So the project submitted was created basically for a game jam .where the judge laughed playing and praised me during his Livestream.\nI had vectors in my course and I ve been working on mechanics of arrow used in game then I went on creating the game.",
       "answer4": "push and pop pairs during 3d games",
       "answer5": "So I had to combine 2 of my projects under a single one for which I had to create a menu screen which I created transparent box for selection.so it had been a problem",
       "answer6": "Nothing more cool than Daniel shiffman sir and his YouTube channel .from those exciting pathfinding algos to those noise patterns he is really awesome",
@@ -1504,7 +1510,7 @@
       "answer3": "I used p5 to render the moveable character around the screen, and also generate the black and white pixels that are used as a depth map for rendering magic eye images (autostereograms). What Is notable with this project is that I was able to make moving magic eye images! that I had only seen one gif of a shark that rotated, and wanted to make a game render out of it. I leveraged the awesome library MagicEye.js created by Ian Pearce to turn the black and white p5 sketch into a magic eye image, and im doing that for each frame, at makes the autostereogram move thats something i had never seen before.",
       "answer4": "lerp, mouseX and mouseY, mousePressed, all things createVector!",
       "answer5": "I hit a roadblock with trying to get the pixel data from the p5's html5 canvas, so i could feed it into the MagicEye.js library. Which turned out not to be so simple. The break though was when I figured out that I could export each frame of the canvas as a image, and feed the raw image into the MagicEye library, it a hack that actually worked! although its really slow. but does the job.",
-      "answer6": "basically anything from this person https://www.redblobgames.com/pathfinding/a-star/introduction.html",
+      "answer6": "Basically anything from this person https://www.redblobgames.com/pathfinding/a-star/introduction.html",
       "social": "http://github.com/wisehackermonkey",
       "id": "project-57",
       "picid": "57.png"
@@ -1564,9 +1570,9 @@
       "tools": "p5.play",
       "answer1": "As an art & technology undergraduate student at the University of Oregon, I primarily experiment in digital illustration, creative programming and video art. Topics related to science, identity, systemic thinking, and human behavior are my focus of practice. This summer, my international internship in Japan got postponed...so I am currently taking online classes on digital audio and video art.",
       "answer2": "I first learned p5.js through an interactive digital arts class at my university for my major. I was a bit hesitant, BUT I eventually grew confident in my abilities as I created personal works outside the classroom and consistently went over lines and lines of JavaScript in my projects.",
-      "answer3": "N/A",
-      "answer4": "N/A",
-      "answer5": "N/A",
+      "answer3": "",
+      "answer4": "",
+      "answer5": "",
       "answer6": "Donate & Support: https://www.instagram.com/theblackschool/",
       "social": "https://instagram.com/social.sin/",
       "id": "project-60",
