--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,11 +1,15 @@
-{"Created By":"Creado Por",
+{"viz2.1":"self-learners",
+    "viz2.2":"and animators, artists, game makers, creative-technologists, curriculum planners, designers, graphic designers, graphics editors, learning experience designers, project managers, software engineer, student, teachers, university faculty members, visualization researchers",
+    "viz2.3":"w/ all kinds of experiences",
+    "Directions":"Click on the pink text to reveal graphs!",
+"Created By":"Creado Por",
 "2020Gallery_Intro":"Para aprender más sobre el proyecto y cómo fue realizado, haz click en la imagen correspondiente. Te invitamos a dejar cualquier sugerencia o comentario en nuestro [libro de visitas](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
  "Project Links":"Enlaces de los proyectos",
  "Visualizations":"Visualizaciones",
  "Projects":"Proyectos",
  "Social Media":"Redes sociales",
  "Tools":"Herramientas",
- "Live":"En vivo",
+ "Live":"En Vivo",
  "Code":"Código",
  "About1":"¿Qué es el p5.js showcase?",
  "About2":"¿Cómo fue organizado?",
@@ -28,7 +32,8 @@
  "Viz2":"nuestras personas contribuyentes son...",
  "Viz3":"para elles p5.js es...",
  "Viz4":"¡revisa los proyectos!",
- "Jump to":"Filtra:",
+ "Jump to":"Jump to",
+ "filter by":"filtra",
  "filters":[
     {"name": "All"},
     {"name": "Visual"},
