--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,7 +1,7 @@
-{"viz2.1":"self-learners",
-    "viz2.2":"and animators, artists, game makers, creative-technologists, curriculum planners, designers, graphic designers, graphics editors, learning experience designers, project managers, software engineer, student, teachers, university faculty members, visualization researchers",
-    "viz2.3":"w/ all kinds of experiences",
-    "Directions":"Click on the pink text to reveal graphs!",
+{"viz2.1":"autodidactas",
+    "viz2.2":"y animadores, artistas, creadores de juegos, tecnologistas creatives, educadores, diseñadores, diseñadores gráficos, editores gráficos, diseñadores de experiencias educativas, gerentes de proyectos, ingenieres de software, estudiantes, profesores escolares, profesores universitarios, investigadores de visuales",
+    "viz2.3":"con todo nivel de experiencias",
+    "Directions":"¡Haz click en el texto rosado para revelar las gráficas!",
 "Created By":"Creado Por",
 "2020Gallery_Intro":"Para aprender más sobre el proyecto y cómo fue realizado, haz click en la imagen correspondiente. Te invitamos a dejar cualquier sugerencia o comentario en nuestro [libro de visitas](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
  "Project Links":"Enlaces de los proyectos",
@@ -32,8 +32,8 @@
  "Viz2":"nuestras personas contribuyentes son...",
  "Viz3":"para elles p5.js es...",
  "Viz4":"¡revisa los proyectos!",
- "Jump to":"Jump to",
- "filter by":"filtra",
+ "Jump to":"Salta a",
+ "filter by":"filtra según",
  "filters":[
     {"name": "All"},
     {"name": "Visual"},
