final translation update

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,4 +1,6 @@
-{"viz2.1":"autodidactas",
+{
+    "Acknowledgements":"Acknowledgements",
+    "viz2.1":"autodidactas",
     "viz2.2":"y animadores, artistas, creadores de juegos, tecnologistas creatives, educadores, diseñadores, diseñadores gráficos, editores gráficos, diseñadores de experiencias educativas, gerentes de proyectos, ingenieres de software, estudiantes, profesores escolares, profesores universitarios, investigadores de visuales",
     "viz2.3":"con todo nivel de experiencias",
     "Directions":"¡Haz click en el texto rosado para revelar las gráficas!",
