--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,7 +2,7 @@
   "viz2.1":"self-learners",
   "viz2.2":"and animators, artists, game makers, creative-technologists, curriculum planners, designers, graphic designers, graphics editors, learning experience designers, project managers, software engineer, student, teachers, university faculty members, visualization researchers",
   "viz2.3":"w/ all kinds of experiences",
-  "Directions":"Click on the pink text to reveal graphs!",
+  "Directions":"Click on the pink text to change graphs!",
   "Created By":"Created By",
  "2020Gallery_Intro":"To learn more about the project and how it was made, click on the image of each card preview. \n\nFeel free to leave feedback or a comment in our [guestbook](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
  "Project Links": "Project Links",
